--- a/ContactBook.UI.WPFApp/ContactBook.UI.WPFApp.csproj
+++ b/ContactBook.UI.WPFApp/ContactBook.UI.WPFApp.csproj
@@ -76,6 +76,8 @@
   <ItemGroup>
     <Compile Include="Converters\InverseBoolToVisibilityConverter.cs" />
     <Compile Include="Model\ContactModel.cs" />
+    <Compile Include="Model\EmailModel.cs" />
+    <Compile Include="Model\PhoneModel.cs" />
     <Compile Include="ViewModel\ContactBookViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
