--- a/ContactBook.UI.WPFApp/ContactBook.UI.WPFApp.csproj
+++ b/ContactBook.UI.WPFApp/ContactBook.UI.WPFApp.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters\InverseBoolToVisibilityConverter.cs" />
+    <Compile Include="Model\AddressModel.cs" />
     <Compile Include="Model\ContactModel.cs" />
     <Compile Include="Model\EmailModel.cs" />
     <Compile Include="Model\GroupModel.cs" />
