Added user feedback to data validation in the UI

--- a/ContactBook.UI.WPFApp/ContactBook.UI.WPFApp.csproj
+++ b/ContactBook.UI.WPFApp/ContactBook.UI.WPFApp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Model\ContactModel.cs" />
     <Compile Include="Model\EmailModel.cs" />
     <Compile Include="Model\GroupModel.cs" />
+    <Compile Include="Model\NotifyErrors.cs" />
     <Compile Include="Model\PhoneModel.cs" />
     <Compile Include="ViewModel\ContactBookViewModel.cs" />
   </ItemGroup>
